--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.less
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.less
@@ -1,6 +1,7 @@
 @import "~less/variables";
 
 @sw-manufacturer-detail-border-color:            @color-steam-cloud;
+@sw-manufacturer-detail-border-radius:           @border-radius-default;
 @sw-manufacturer-detail-danger-background-color: @color-crimson;
 @sw-manufacturer-detail-danger-text-color:       @color-white;
 @sw-manufacturer-detail-logo-background-color:   @color-white;
@@ -59,7 +60,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
         border: 1px dashed @sw-manufacturer-detail-border-color;
-        border-radius: @border-radius-default;
+        border-radius: @sw-manufacturer-detail-border-radius;
         background-color: @sw-manufacturer-detail-upload-background-color;
         position: relative;
 
