--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -2,6 +2,7 @@
 @import "~less/mixins";
 
 @sw-media-catalog-color-text-button:                 @color-kashmir;
+@sw-media-catalog-font-size-change-icon-size-label:  @font-size-small;
 @sw-media-catalog-color-change-icon-size-label:      @color-kashmir;
 @sw-media-catalog-color-change-icon-size-slider:     @color-deep-cove;
 @sw-media-catalog-color-change-icon-size-slide:      @color-gutenberg;
@@ -118,7 +119,7 @@
 
     .sw-media-catalog__icon-size-label {
         margin: 8px 10px 8px 0;
-        font-size: @font-size-small;
+        font-size: @sw-media-catalog-font-size-change-icon-size-label;
         color: @sw-media-catalog-color-change-icon-size-label;
     }
 
