--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -50,7 +50,7 @@
                 <template slot="card-view-sidebar">
                     <sw-sidebar-media-item
                             :catalogId="product.catalogId"
-                            @sw-sidebar-media-item-add-item-to-product="handleAddItemToProduct">
+                            @sw-sidebar-media-item-add-item-to-product="onAddItemToProduct">
                     </sw-sidebar-media-item>
                 </template>
             </sw-card-view>
