--- a/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -2,7 +2,7 @@
     <sw-modal variant="small"
               class="sw-media-modal-delete"
               @closeModal="closeDeleteModal($event)"
-              :title="$tc('global.sw-media-modal-delete.modalHeader')">
+              :title="$tc('global.sw-media-modal-delete.titleModal')">
 
         {% block sw_media_modal_body %}
             {{ $tc('global.sw-media-modal-delete.deleteMessage', itemsToDelete.length, { mediaName: itemsToDelete[0].name, count: itemsToDelete.length }) }}
@@ -13,13 +13,16 @@
 
                 {% block sw_media_modal_delete_cancel_button %}
                     <sw-button @click="closeDeleteModal($event)" size="small">
-                        {{ $tc('global.sw-media-modal-delete.modalButtonAbort') }}
+                        {{ $tc('global.sw-media-modal-delete.buttonAbort') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_media_modal_delete_confirm_button %}
-                    <sw-button class="sw-media-modal-delete__confirm" @click="deleteSelection($event)" size="small" variant="primary">
-                        {{ $tc('global.sw-media-modal-delete.modalButtonDelete') }}
+                    <sw-button class="sw-media-modal-delete__confirm"
+                               @click="deleteSelection($event)"
+                               size="small"
+                               variant="primary">
+                        {{ $tc('global.sw-media-modal-delete.buttonDelete') }}
                     </sw-button>
                 {% endblock %}
 
