--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -1,6 +1,6 @@
 {% block sw_media_modal_replace %}
     <sw-modal class="sw-media-modal-replace"
-              :title="$tc('global.sw-media-modal-replace.modalTitle')"
+              :title="$tc('global.sw-media-modal-replace.titleModal')"
               @closeModal="emitCloseReplaceModal">
 
         {% block sw_media_modal_replace_file_input %}
@@ -34,13 +34,13 @@
 
                 {% block sw_media_modal_replace_cancel_button %}
                     <sw-button size="small" @click="emitCloseReplaceModal">
-                        {{ $tc('global.sw-media-modal-replace.cancelButton') }}
+                        {{ $tc('global.sw-media-modal-replace.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_media_modal_replace_replace_button %}
                     <sw-button size="small" variant="primary" @click="replaceMediaItem" :disabled="!isUploadDataSet">
-                        {{ $tc('global.sw-media-modal-replace.replaceButton') }}
+                        {{ $tc('global.sw-media-modal-replace.buttonReplace') }}
                     </sw-button>
                 {% endblock %}
 
