NEXT-934 - Change button style to default button size

--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -47,6 +47,8 @@
 
                     {% block sw_sidebar_media_item_load_more_button %}
                         <sw-button
+                            size="small"
+                            block
                             v-if="showMore"
                             @click="onLoadMore"
                             class="sw-sidebar-media-item__load-more-button">
