NEXT-921 Refactored the notification store

--- a/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
@@ -9,7 +9,7 @@
                       :appearance="notification.system ? 'system' : 'notification'"
                       :notificationIndex="notification.uuid"
                       :closable="true"
-                      @swAlertClose="onClose">
+                      @swAlertClose="onClose(notification)">
 
                 <div slot="default" v-html="notification.message"></div>
             </sw-alert>
