NEXT-647 - Add optional responsive breakpoints to sw-container

--- a/Resources/administration/src/app/component/base/sw-container/sw-container.html.twig
+++ b/Resources/administration/src/app/component/base/sw-container/sw-container.html.twig
@@ -1,5 +1,5 @@
 {% block sw_container %}
-    <div class="sw-container" :style="gridStyles">
+    <div class="sw-container" :style="currentCssGrid">
         <slot>
             {% block sw_container_slot_default %}{% endblock %}
         </slot>
