--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-product-settings-form">
 
         {% block sw_product_settings_form_content %}
-            <sw-container grid="1fr 1fr" gap="0px 30px">
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
 
                 {% block sw_product_settings_form_create_date_field %}
                     <sw-field type="datetime"
@@ -23,7 +23,7 @@
                 {% endblock %}
             </sw-container>
 
-            <sw-container grid="1fr 1fr" gap="0px 30px">
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                 {% block sw_product_settings_form_width_field %}
                     <sw-field type="number"
                               :label="$tc('sw-product.settingsForm.labelWidth')"
@@ -65,8 +65,8 @@
                 {% endblock %}
             </sw-container>
 
-            <sw-container grid="1fr 1fr" gap="0px 30px">
-                <sw-container grid="1fr 1fr" gap="0px 30px">
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
+                <sw-container columns="1fr 1fr" gap="0px 30px">
 
                     {% block sw_product_settings_form_min_purchase_field %}
                         <sw-field type="number"
@@ -94,7 +94,7 @@
                 {% endblock %}
             </sw-container>
 
-            <sw-container grid="1fr 1fr" gap="0px 30px">
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                 {% block sw_product_settings_form_pseudo_sales_field %}
                     <sw-field type="number"
                               :label="$tc('sw-product.settingsForm.labelPseudoSales')"
@@ -112,7 +112,7 @@
                 {% endblock %}
             </sw-container>
 
-            <sw-container grid="1fr 1fr 1fr" gap="0px 30px" align="center">
+            <sw-container columns="repeat(auto-fit, minmax(150px, 1fr)" gap="0px 30px" align="center">
                 {% block sw_product_settings_form_active_field %}
                     <sw-field type="boolean"
                               :label="$tc('sw-product.settingsForm.labelActive')"
