--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -16,7 +16,7 @@
             </sw-text-editor>
         {% endblock %}
 
-        <sw-container grid="1fr 1fr" gap="0px 30px">
+        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr))" gap="0px 30px">
             {% block sw_product_basic_form_id_field %}
                 <sw-field type="text"
                           :label="$tc('sw-product.basicForm.labelProductNumber')"
